Convert alerts and favorite resources struts actions to generate data in JSON format, still needs to be hooked up to the jsps.